# discord-bot-heroku

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Procfile  assistantbot.py  assitantbot.py  bot.py  entrypoint.sh  fly.toml.sample  pyproject.toml  readme.md  requirements.txt  settings.py  start.sh
cogs/: admincog.py  eventcog.py  gamecog.py  messagecog.py  onmessagecog.py  reactionchannelercog.py
cogs/modules/: auditlogchannel.py  coyote.py  gamebuttons.py  games.py  grouping.py  members.py  ohgiri.py  radiko.py  reactionchannel.py  readjson.py  savefile.py  scrapboxsidandpnames.py  settings.py  wordwolfbuttons.py
cogs/modules/files/: .env-docker.sample  .env.sample  ohgiri.json  reaction-channel.json  wordwolf.json
