[tool.poetry]
name = "discord-bot-heroku"
version = "0.7.5"
description = ""
authors = ["tetsuya-ki <64536338+tetsuya-ki@users.noreply.github.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.20.0"
mojimoji = "^0.0.12"
Flask = "^2.2.2"
"discord.py" = "^2.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
